docs-archive/apache-airflow-providers-google/22.1.0/_sources/_api/airflow/providers/google/cloud/triggers/cloud_sql/index.rst.txt
airflow.providers.google.cloud.triggers.cloud_sql
=================================================

.. py:module:: airflow.providers.google.cloud.triggers.cloud_sql

.. autoapi-nested-parse::

   This module contains Google Cloud SQL triggers.



Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.triggers.cloud_sql.CloudSQLExportTrigger


Module Contents
---------------

.. py:class:: CloudSQLExportTrigger(operation_name, project_id = PROVIDE_PROJECT_ID, gcp_conn_id = 'google_cloud_default', impersonation_chain = None, poke_interval = 20, api_version = 'v1beta4')

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`


   Trigger that periodically polls information from Cloud SQL API to verify job status.

   Implementation leverages asynchronous transport.


   .. py:attribute:: gcp_conn_id
      :value: 'google_cloud_default'



   .. py:attribute:: impersonation_chain
      :value: None



   .. py:attribute:: operation_name


   .. py:attribute:: project_id
      :value: None



   .. py:attribute:: poke_interval
      :value: 20



   .. py:attribute:: api_version
      :value: 'v1beta4'



   .. py:attribute:: hook


   .. py:method:: serialize()

      Return the information needed to reconstruct this Trigger.

      :return: Tuple of (class path, keyword arguments needed to re-instantiate).



   .. py:method:: run()
      :async:


      Run the trigger in an asynchronous context.

      The trigger should yield an Event whenever it wants to fire off
      an event, and return None if it is finished. Single-event triggers
      should thus yield and then immediately return.

      If it yields, it is likely that it will be resumed very quickly,
      but it may not be (e.g. if the workload is being moved to another
      triggerer process, or a multi-event trigger was being used for a
      single-event task defer).

      In either case, Trigger classes should assume they will be persisted,
      and then rely on cleanup() being called when they are no longer needed.



